--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,28 @@
     outline: none;
 }
 
-html, body {
+@font-face {
+    font-family: 'Museo Sans Cyrl 700';
+    src: url('../fonts/MuseoSansCyrl-700.eot');
+    src: local('MuseoSansCyrl-700'),
+    url('../fonts/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/MuseoSansCyrl-700.woff') format('woff'),
+    url('../fonts/MuseoSansCyrl-700.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+html,
+body {
     font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    color: #FFFFFF;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -16,8 +36,11 @@ html, body {
 }
 
 .header {
-    padding-top: 6.4rem;
+    position: absolute;
     padding-bottom: 6.4rem;
+    left: 50%;
+    top: 6.4rem;
+    transform: translate(-50%, 0);
 }
 
 .header .container {
@@ -44,7 +67,9 @@ html, body {
 .header__nav a {
     color: #FFFFFF;
     text-decoration: none;
-    font-size: 14px; /*  РАЗМЕР ТЕКСТА  */
+    font-weight: normal;
+    font-size: 1.4rem;
+    line-height: 114%;
 }
 
 .header__socials-icon {
@@ -56,13 +81,87 @@ html, body {
     margin-right: 2rem;
 }
 
-body {
+.main {
+    padding-top: 18.7rem;
     background: url('../img/background.jpg');
+    background-repeat: no-repeat; /*убираем повторение бг*/
+    background-size: cover; /*растяжение на всю область*/
+    background-position-x: center; /*равнение по оси х по центру*/
+    background-position-y: top; /*равнение по оси у по верхней границе*/
+}
+
+.main__rating-title {
+    font-size: 1.4rem;
+    line-height: 114%;
+    margin-bottom: 1.6rem;
+}
+
+.main__rating {
+    margin-bottom: 1rem;
+}
+
+.main__rating-wrap {
+    display: flex;
+    align-items: center;
+}
+
+.main__rating-stars {
+    display: flex;
+    align-items: center;
+    margin-right: .9rem;
+}
+
+.main__rating-star {
+    width: 1.2rem;
+    height: 1.2rem;
+    flex-shrink: 0; /*чтобы звездочка не сжималась*/
+    cursor: pointer;
+}
+
+.main__rating-star:not(:last-child) {
+    margin-right: .4rem;
+}
+
+.main__rating {
+    margin-bottom: 1rem;
+}
+
+.main__rating-number {
+    font-size: 1.2rem;
+    line-height: 117%;
+}
+
+.main__header {
+    font-family: 'Museo Sans Cyrl 700';
+    font-size: 7.6rem;
+    line-height: 120%;
+}
+
+.main__description {
+    max-width: 52.8rem;
+    margin-bottom: 4.1rem;
+    /*max-height: 10rem;*/
+    font-size: 1.4rem;
+    line-height: 150%;
+}
+
+.main__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 24.5rem;
+    padding: 2.2rem 7.2rem;
+    margin-bottom: 8.8rem;
+    font-size: 1.4rem;
+    line-height: 114%;
+    color: #FFFFFF;
+    text-decoration: none;
+    background-color: #151515;
+    border-radius: .8rem;
 }
 
 .footer {
     background: #030102;
-    color: #FFFFFF;
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
@@ -80,14 +179,22 @@ body {
 }
 
 .footer_menu li {
-    list-style: none; //убираем точки у списка
+    list-style: none; /*убираем точки у списка*/
 }
 
 .footer_menu li a {
-    color: #FFFFFF;
-    text-decoration: none; // убираем подчеркивание у ссылок
+    color: #686767;
+    text-decoration: none; /*убираем подчеркивание у ссылок*/
+    font-size: 1.4rem;
+    line-height: 143%;
 }
 
 .footer_menu li:not(:last-child) {
-    margin-right: 2.5rem; // правый отступ у всех ссылок, кроме последней
+    margin-right: 2.5rem; /*правый отступ у всех ссылок, кроме последней*/
+}
+
+.footer__copy {
+    color: #686767;
+    font-size: 1.4rem;
+    line-height: 143%;
 }
