--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,98 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
 .container {
     width: 113.5rem;
     margin: 0 auto;
+}
+
+@media (max-width: 108em) {
+    html {
+        font-size: 9px;
+    }
+}
+
+@media (max-width: 105em) {
+    html {
+        font-size: 8.75px;
+    }
+}
+
+@media (max-width: 91.5em) {
+    html {
+        font-size: 7.9px;
+    }
+}
+
+@media (max-width: 91em) {
+    html {
+        font-size: 8.4px;
+    }
+}
+
+@media (max-width: 90em) {
+    html {
+        font-size: 7.9px;
+    }
+}
+
+@media (max-width: 80em) {
+    html {
+        font-size: 7.2px;
+    }
+}
+
+@media (max-width: 72em) {
+    html {
+        font-size: 6.5px;
+    }
+}
+
+@media (max-width: 64em) {
+    html {
+        font-size: 5.5px;
+    }
+}
+
+@media (max-width: 44em) {
+    html {
+        font-size: 9px;
+    }
+}
+
+@media (max-width: 38em) {
+    html {
+        font-size: 8px;
+    }
+}
+
+@media (max-width: 34em) {
+    html {
+        font-size: 7px;
+    }
+}
+
+@media (max-width: 30em) {
+    html {
+        font-size: 6px;
+    }
+}
+
+@media (max-width: 26em) {
+    html {
+        font-size: 4.5px;
+    }
+}
+
+@media (max-width: 21em) {
+    html {
+        font-size: 4.4px;
+    }
 }
 
 .header {
@@ -72,6 +161,10 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 114%;
 }
 
+.header__socials {
+    display: flex;
+}
+
 .header__socials-icon {
     width: 1.7rem;
     height: 1.6rem;
@@ -81,8 +174,15 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: 2rem;
 }
 
+.header__nav-mobile,
+.header__menu-close,
+.menu-burger {
+    display: none;
+}
+
 .main {
     padding-top: 18.7rem;
+    padding-bottom: 10.4rem;
     background: url('../img/background.jpg');
     background-repeat: no-repeat; /*убираем повторение бг*/
     background-size: cover; /*растяжение на всю область*/
@@ -137,12 +237,47 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 120%;
 }
 
+.main__description-wrap {
+    display: flex;
+    align-items: center;
+}
+
 .main__description {
     max-width: 52.8rem;
     margin-bottom: 4.1rem;
     /*max-height: 10rem;*/
     font-size: 1.4rem;
     line-height: 150%;
+}
+
+.main__button-play {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 13.2rem;
+    height: 13.2rem;
+    margin-left: 33.1rem;
+    border-radius: 50%;
+    background-color: #391917;
+    cursor: pointer;
+    /*opacity: .5;*/
+}
+
+.main__button-dark {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+    background-color: #151515;
+}
+
+
+
+.main__button-dark img {
+    width: 3.5rem;
+    height: 4rem;
 }
 
 .main__button {
@@ -158,6 +293,43 @@ h1, h2, h3, h4, h5, h6 {
     text-decoration: none;
     background-color: #151515;
     border-radius: .8rem;
+}
+
+.main-slider__wrap {
+    max-width: 41.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.main-slider__arrow {
+    width: 3.2rem;
+    height: 2.2rem;
+    margin-left: 2.8rem;
+    flex-shrink: 0;
+    cursor: pointer
+}
+
+.main-slider__slide {
+    position: relative;
+    width: 16rem;
+    height: 10.5rem;
+    border-radius: .8rem;
+    overflow: hidden; /*обрезать лишнее за границей картинок*/
+}
+
+.main-slider__slide span {
+    position: absolute;
+    left: 1.2rem;
+    bottom: .6rem;
+    transform: translate(0, 0);
+    font-size: 1rem;
+    line-height: 120%;
+}
+
+.main-slider__slide img {
+    width: 100%; /*занять 100% родителя по ширине*/
+    height: 100%; /*занять 100% родителя по высоте*/
+    object-fit: cover; /*растянуть изображение по родителю*/
 }
 
 .footer {
@@ -197,4 +369,136 @@ h1, h2, h3, h4, h5, h6 {
     color: #686767;
     font-size: 1.4rem;
     line-height: 143%;
+}
+
+.spotify__vidget {
+    margin-top: 40px;
+}
+
+@media (max-width: 48em) {
+    html {
+        font-size: 10px;
+    }
+
+    .container {
+        width: 100%;
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .header {
+        width: 69.4%;
+        background-color: #151515;
+        top: 0;
+        transform: translate(-28%, 0);
+        padding-top: 4rem;
+        padding-bottom: 4rem;
+        z-index: 10;
+        display: none;
+    }
+    
+    .header .container, .header__menu, .header__nav {
+        flex-direction: column;
+        display: flex;
+    }
+
+    .header__logo {
+        margin-right: 0;
+        margin-bottom: 3.5rem;
+    }
+
+    .header__socials {
+        margin-bottom: 2.2rem;
+    }
+
+    .header__nav {
+        display: none;
+    }
+
+    .header__nav-mobile {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header__nav-mobile a {
+        color: #FFFFFF;
+        text-decoration: none;
+        font-weight: normal;
+        font-size: 1.4rem;
+        line-height: 114%;
+    }
+
+    .header__nav-mobile a {
+        display: inline-block;
+    }
+
+    .header__nav-mobile a:not(:last-child) {
+        margin-bottom: 1.7rem;
+    }
+
+    .header__menu-close {
+        display: block;
+        position: absolute;
+        right: 2rem;
+        top: 2rem;
+        width: 2.3rem;
+        height: 2.3rem;
+    }
+
+    .menu-burger {
+        display: block;
+        position: absolute;
+        right: 5%;
+        top: 3%;
+        width: 6rem;
+        height: 6rem;
+    }
+
+    .main {
+        background-position-x: 60%;
+    }
+
+    .main__description-wrap {
+        flex-direction: column;
+        margin-bottom: 5rem;
+    }
+
+    .main__button-play {
+        margin-left: 0;
+    }
+
+    .main__button {
+        margin-bottom: 4.4rem;
+    }
+
+    .main-slider__arrow {
+        display: none;
+    }
+
+    .main-slider__wrap {
+        max-width: 53.5%;
+    }
+
+    .footer {
+        background: #141218;
+        padding-bottom: 0;
+        padding-top: 0;
+    }
+    
+    .footer .container {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .footer__copy {
+        margin-top: 2.4rem;
+        margin-bottom: .8rem;
+    }
+
+    .footer_menu {
+        margin-top: 0;
+        margin-bottom: 3.7rem;
+    }
+
+
 }
